[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Docks.gd" type="Script" id=1]
[ext_resource path="res://Scripts/DynamicTileMap.gd" type="Script" id=2]
[ext_resource path="res://Assets/icon.png" type="Texture" id=3]
[ext_resource path="res://Scripts/SelectionGrid.gd" type="Script" id=4]
[ext_resource path="res://Scripts/BlockGrid.gd" type="Script" id=5]

[sub_resource type="TileSet" id=1]
0/name = "icon.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Animation" id=2]
resource_name = "Glow"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.607843, 1, 0.65098, 0.196078 ), Color( 0.607843, 1, 0.65098, 0.588235 ), Color( 0.607843, 1, 0.65098, 0.196078 ) ]
}

[sub_resource type="TileSet" id=3]
0/name = "icon.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "icon.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "icon.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "icon.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=7]
0/name = "icon.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="PlayGrid" type="Node2D"]
script = ExtResource( 1 )

[node name="SelectionGrid" type="TileMap" parent="."]
modulate = Color( 0.607843, 1, 0.65098, 0.196078 )
z_index = 2
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 196612, 0, 0 )
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SelectionGrid"]
anims/Glow = SubResource( 2 )

[node name="BlockGrid" type="TileMap" parent="."]
tile_set = SubResource( 3 )
format = 1
script = ExtResource( 5 )

[node name="AnimatedBlocks" type="Node" parent="BlockGrid"]

[node name="UpdateTimer" type="Timer" parent="BlockGrid"]
wait_time = 0.5
one_shot = true

[node name="RedGrid" type="TileMap" parent="BlockGrid"]
modulate = Color( 1, 0.00392157, 0.00392157, 1 )
tile_set = SubResource( 4 )
format = 1
script = ExtResource( 2 )

[node name="BlueGrid" type="TileMap" parent="BlockGrid"]
modulate = Color( 0, 0.0823529, 0.980392, 1 )
tile_set = SubResource( 5 )
format = 1
script = ExtResource( 2 )

[node name="GreenGrid" type="TileMap" parent="BlockGrid"]
modulate = Color( 0.0235294, 0.584314, 0.0352941, 1 )
tile_set = SubResource( 6 )
format = 1
script = ExtResource( 2 )

[node name="YellowGrid" type="TileMap" parent="BlockGrid"]
modulate = Color( 0.964706, 0.898039, 0.470588, 1 )
tile_set = SubResource( 7 )
format = 1
script = ExtResource( 2 )

[connection signal="push_ended" from="BlockGrid" to="." method="_on_BlockGrid_push_ended"]
[connection signal="timeout" from="BlockGrid/UpdateTimer" to="BlockGrid" method="animation_ended"]
